Fix alignment

--- a/src/assets/style/_content-box.scss
+++ b/src/assets/style/_content-box.scss
@@ -2,7 +2,7 @@
 .content-box {
 	background-color: var(--bg-content-color);
 	max-width: var(--content-width);
-	margin: 0 auto;
+	// margin: 0 auto;
 	transition: background-color .6s;
 	padding: var(--space);
   border-radius: var(--radius);
